<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_email_verified"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_email"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_ve_sent_a_verification_email_to_your_email_address"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/buttonResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/resend_email"
        android:textColor="#000000"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_ve_verified_my_email"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@android:color/white"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>